# tableturf-battle-solver

./: .gitignore  LICENSE  README.md  core.py  output.prof  pyproject.toml  search.py
cards/: 001.txt  002.txt  003.txt  004.txt  095.txt  144.txt
maps/: 01.txt
score/: fill.py  space.py
stages/: 01.txt  08.txt
