[tool.poetry]
name = "tableturf-battle-solver"
version = "0.1.0"
description = ""
authors = ["ousquid"]
license = "MIT"
readme = "README.md"
packages = [{include = "tableturf_battle_solver"}]

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^1.23.4"
ipython = "^8.5.0"
tqdm = "^4.64.1"
scipy = "^1.9.3"


[tool.poetry.group.dev.dependencies]
ipython = "^8.6.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
