[tool.poetry]
name = "tableturf-battle-solver"
version = "0.1.0"
description = ""
authors = ["ousquid"]
license = "MIT"
readme = "README.md"
packages = [{include = "tableturf_battle_solver"}]

[tool.poetry.dependencies]
python = "^3.8"
ipython = "^8.5.0"
tqdm = "^4.64.1"
colorama = "^0.4.6"
typing-extensions = "^4.5.0"

[tool.poetry.group.dev.dependencies]
ipython = "^8.6.0"
ipykernel = "^6.21.2"
snakeviz = "^2.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
